src/test/ui/traits/associated_type_bound/check-trait-object-bounds-3.stderr
error[E0597]: `s` does not live long enough
  --> $DIR/check-trait-object-bounds-3.rs:15:34
   |
LL |         z = f::<dyn X<Y = &str>>(&s);
   |             ---------------------^^-
   |             |                    |
   |             |                    borrowed value does not live long enough
   |             argument requires that `s` is borrowed for `'static`
LL |
LL |     }
   |     - `s` dropped here while still borrowed

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
